--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <title>Africa Driving License School - Hawassa</title>
 
     <style>
-/* General Reset */
 * {
   margin: 0;
   padding: 0;
@@ -54,6 +53,11 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 999;
 }
 
 .logo-container {
@@ -66,10 +70,15 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  transition: transform 0.3s ease;
+}
+
+.logo-container img:hover {
+  transform: scale(1.1);
 }
 
 .logo {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
@@ -85,10 +94,12 @@ nav ul li a {
   text-decoration: none;
   font-size: 0.9rem;
   padding: 5px;
+  transition: color 0.3s ease;
 }
 
 nav ul li a:hover {
   text-decoration: underline;
+  color: #3498db;
 }
 
 /* Hero Section */
@@ -100,17 +111,21 @@ nav ul li a:hover {
   align-items: center;
   text-align: center;
   padding: 20px;
+  position: relative;
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.6);
 }
 
 .hero-content h2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: white;
   margin-bottom: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .hero-content p {
   color: #ddd;
   font-size: 1rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 /* Courses Section */
@@ -125,10 +140,36 @@ nav ul li a:hover {
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   transition: 0.3s;
+  text-align: center;
 }
 
 .course-card:hover {
   transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.course-card h3 {
+  font-size: 1.5rem;
+  color: #003366;
+}
+
+.course-card p {
+  color: #555;
+  font-size: 1rem;
+  margin: 15px 0;
+}
+
+.course-card a {
+  text-decoration: none;
+  background-color: #3498db;
+  padding: 10px 20px;
+  color: white;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.course-card a:hover {
+  background-color: #2980b9;
 }
 
 /* About Section */
@@ -142,25 +183,46 @@ nav ul li a:hover {
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 20px;
+  justify-content: space-between;
 }
 
 .info-card {
-  flex: 1 1 100%;
+  flex: 1 1 45%;
   background: white;
   padding: 20px;
   border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: 0.3s;
+}
+
+.info-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.info-card h4 {
+  color: #003366;
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.info-card p {
+  color: #555;
 }
 
 /* Media Query for Mobile */
 @media (max-width: 768px) {
+  /* Navbar adjustments */
   .navbar {
     flex-direction: column;
     align-items: flex-start;
+    padding: 15px;
   }
 
   .logo-container {
     width: 100%;
     justify-content: center;
+    margin-bottom: 15px;
   }
 
   nav ul {
@@ -168,23 +230,37 @@ nav ul li a:hover {
     gap: 10px;
     width: 100%;
     align-items: center;
+    margin-top: 15px;
   }
 
+  nav ul li a {
+    font-size: 1rem;
+    padding: 8px 15px;
+  }
+
+  /* Hero Section */
   .hero {
     height: auto;
     padding: 50px 20px;
+    text-align: center;
+    box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.5);
   }
 
   .hero-content h2 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .hero-content p {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 
-  .info-cards {
-    flex-direction: column;
+  /* Courses Section */
+  .courses .container {
+    padding: 20px;
+  }
+
+  .course-card {
+    margin-bottom: 15px;
   }
 
   .course-card h3 {
@@ -194,8 +270,125 @@ nav ul li a:hover {
   .course-card p {
     font-size: 0.9rem;
   }
+
+  .course-card a {
+    font-size: 1rem;
+    padding: 8px 15px;
+  }
+
+  /* About Section */
+  .info-cards {
+    flex-direction: column;
+  }
+
+  .info-card {
+    flex: 1 1 100%;
+    margin-bottom: 20px;
+  }
+
+  .info-card h4 {
+    font-size: 1.1rem;
+  }
+
+  .info-card p {
+    font-size: 0.9rem;
+  }
+}
+/* Footer Styling */
+footer {
+  background-color: #003366;
+  color: white;
+  padding: 30px;
+  font-family: Arial, sans-serif;
 }
 
+/* Contact Info Section */
+.contact-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+/* Contact Info Styling */
+.contact-info {
+  flex: 1 1 48%;
+  margin-bottom: 20px;
+}
+
+.contact-info p {
+  margin: 5px 0;
+}
+
+.contact-info a {
+  color: #FFD700;
+  text-decoration: none;
+}
+
+.contact-info a:hover {
+  text-decoration: underline;
+}
+
+/* Branches Styling */
+.branches {
+  flex: 1 1 48%;
+}
+
+.branches ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.branches ul li {
+  margin-bottom: 5px;
+}
+
+.branches p {
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+/* Footer Bottom */
+footer div {
+  padding: 10px;
+  background-color: #333;
+  color: white;
+  font-size: 13px;
+  text-align: left;
+  border-top: 5px solid #FFD700;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+footer div a {
+  color: #FFD700;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+footer div a:hover {
+  text-decoration: underline;
+}
+
+/* Media Query for Mobile */
+@media (max-width: 768px) {
+  .contact-section {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .contact-info, .branches {
+    flex: 1 1 100%;
+  }
+
+  footer div {
+    text-align: center;
+  }
+
+  footer div p {
+    font-size: 12px;
+  }
+}
     </style>
 </head>
 
