--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@ nav ul li a:hover {
 /* Animation Keyframes */
 @keyframes changeBackground {
   0% {
-    background-image: url('a.jpg');
+    background-image: url('a.png');
   }
   33% {
-    background-image: url('b.jpg');
+    background-image: url('b.png');
   }
   66% {
-    background-image: url('c.jpg');
+    background-image: url('c.png');
   }
   100% {
-    background-image: url('a.jpg');
+    background-image: url('a.png');
   }
 }
 
