--- a/index.html
+++ b/index.html
@@ -17,7 +17,56 @@
   padding: 0;
   box-sizing: border-box;
 }
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #003366;
+  text-align: center;
+  margin-bottom: 20px;
+  position: relative;
+  padding-bottom: 10px;
+}
 
+h2::after {
+  content: '';
+  position: absolute;
+  width: 80px;
+  height: 4px;
+  background: linear-gradient(90deg, #ffcc00, #003366);
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
+  animation: underlineAnimation 1s ease-in-out;
+}
+
+@keyframes underlineAnimation {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  50% {
+    width: 40px;
+    opacity: 1;
+  }
+  100% {
+    width: 80px;
+    opacity: 1;
+  }
+}
+
+/* Mobile Responsive */
+@media (max-width: 768px) {
+  h2 {
+    font-size: 1.5rem;
+    padding-bottom: 8px;
+  }
+  
+  h2::after {
+    width: 50px;
+  }
+}
 /* Loader */
 .loader {
   position: fixed;
