--- a/index.html
+++ b/index.html
@@ -93,24 +93,23 @@ h2::after {
   to { transform: rotate(360deg); }
 }
 
-/* Sidebar Navigation */
+/* Sidebar container */
 nav {
-  width: 220px;
-  min-height: 100vh;
-  background-color: #003366; /* dark blue */
-  padding-top: 40px;
   position: fixed;
   top: 0;
   left: 0;
-  overflow-y: auto;
+  width: 220px;
+  height: 100%;
+  background-color: #004080; /* Dark blue background */
+  padding-top: 60px;
   box-shadow: 2px 0 8px rgba(0, 0, 0, 0.2);
   z-index: 999;
 }
 
+/* Sidebar links */
 nav ul {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
-  margin: 0;
 }
 
 nav ul li {
@@ -119,37 +118,24 @@ nav ul li {
 }
 
 nav ul li a {
-  text-decoration: none;
-  color: white;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 10px 15px;
   display: block;
-  transition: background-color 0.3s, transform 0.3s;
+  padding: 12px 20px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 18px;
+  transition: 0.3s;
   border-radius: 8px;
 }
 
 nav ul li a:hover {
-  background-color: #0055a5;
-  transform: translateX(10px);
+  background-color: #0066cc; /* Lighter blue on hover */
+  color: #ffcc00; /* Gold text on hover */
 }
 
-/* Space for page content next to sidebar */
+/* To push the main content to the right */
 body {
   margin-left: 220px;
-  font-family: Arial, sans-serif;
-}
-
-/* Responsive - sidebar collapses on small screens */
-@media (max-width: 768px) {
-  nav {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  body {
-    margin: 0;
-  }
+  font-family: 'Poppins', sans-serif; /* Optional: Modern font */
 }
 .hero {
   position: relative;
