--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+}
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 2rem;
@@ -139,7 +151,7 @@ body {
 }
 .hero {
   position: relative;
-  height: 90vh;
+  height: 200vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
