--- a/index.html
+++ b/index.html
@@ -187,9 +187,25 @@ body {
     font-size: 1.5rem;
   }
 
-  .hero-content p {
-    font-size: 1rem;
-  }
+.hero-content p {
+  color: #ddd; /* Light grey text for contrast on dark backgrounds */
+  font-size: 1rem; /* Standard font size */
+  line-height: 1.6; /* Improved line height for readability */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Soft text shadow for depth */
+  padding: 15px 20px; /* Add padding for spacing */
+  background-color: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background for readability */
+  border-radius: 6px; /* Rounded corners for a modern look */
+  max-width: 80%; /* Limit width for better control over text placement */
+  margin: 20px auto; /* Center the content with margin */
+  text-align: center; /* Center-align text for a balanced appearance */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* Subtle shadow for depth */
+  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover transition */
+}
+
+.hero-content p:hover {
+  background-color: rgba(0, 0, 0, 0.7); /* Darker background on hover */
+  transform: translateY(-4px); /* Slight upward movement on hover */
+}
 }
 
 .hero-content h2 {
@@ -200,9 +216,23 @@ body {
 }
 
 .hero-content p {
-  color: #ddd;
-  font-size: 1rem;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  color: #ddd; /* Light grey text for contrast on dark backgrounds */
+  font-size: 1rem; /* Standard font size */
+  line-height: 1.6; /* Improved line height for readability */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Soft text shadow for depth */
+  padding: 15px 20px; /* Add padding for spacing */
+  background-color: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background for readability */
+  border-radius: 6px; /* Rounded corners for a modern look */
+  max-width: 80%; /* Limit width for better control over text placement */
+  margin: 20px auto; /* Center the content with margin */
+  text-align: center; /* Center-align text for a balanced appearance */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* Subtle shadow for depth */
+  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover transition */
+}
+
+.hero-content p:hover {
+  background-color: rgba(0, 0, 0, 0.7); /* Darker background on hover */
+  transform: translateY(-4px); /* Slight upward movement on hover */
 }
 
 /* Courses Section */
@@ -231,9 +261,21 @@ body {
 }
 
 .course-card p {
-  color: #555;
-  font-size: 1rem;
-  margin: 15px 0;
+  color: #555; /* Dark grey text for readability */
+  font-size: 1rem; /* Standard font size */
+  margin: 15px 0; /* Vertical margin for spacing */
+  line-height: 1.6; /* Adjust line height for better readability */
+  padding: 12px; /* Add padding for spacing around the text */
+  background-color: #fafafa; /* Light grey background for a subtle contrast */
+  border-left: 4px solid #007BFF; /* Blue left border for a modern touch */
+  border-radius: 8px; /* Rounded corners for a softer, modern look */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
+  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover effect */
+}
+
+.course-card p:hover {
+  background-color: #e3f2fd; /* Light blue background on hover */
+  transform: translateY(-4px); /* Lift effect on hover */
 }
 
 .course-card a {
@@ -284,7 +326,20 @@ body {
 }
 
 .info-card p {
-  color: #555;
+  color: #555; /* Dark grey text color */
+  font-size: 1rem; /* Set font size for readability */
+  line-height: 1.6; /* Increase line height for better readability */
+  padding: 12px; /* Add padding for spacing inside the paragraph */
+  background-color: #f8f8f8; /* Light grey background for a clean look */
+  border-left: 4px solid #007BFF; /* Add a blue left border for emphasis */
+  border-radius: 6px; /* Slightly rounded corners for a modern look */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Light shadow for subtle depth */
+  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth transition for hover effects */
+}
+
+.info-card p:hover {
+  background-color: #e0f7fa; /* Light blue background on hover */
+  transform: translateY(-4px); /* Slight upward lift on hover */
 }
 
 
@@ -300,10 +355,24 @@ body {
     font-size: 1.5rem;
   }
 
-  .hero-content p {
-    font-size: 1rem;
-  }
+.hero-content p {
+  font-size: 1rem;
+  color: #ffffff; /* White text color for contrast against dark backgrounds */
+  line-height: 1.6; /* Improve line spacing for better readability */
+  padding: 15px 20px; /* Add padding for a more comfortable space around text */
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for contrast */
+  border-radius: 8px; /* Rounded corners for a softer look */
+  max-width: 80%; /* Limit width for better control over text placement */
+  margin: 20px auto; /* Center the content with some margin */
+  text-align: center; /* Center-align text for a polished appearance */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Shadow for added depth */
+  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover effects */
+}
 
+.hero-content p:hover {
+  background-color: rgba(0, 0, 0, 0.7); /* Darker background on hover */
+  transform: translateY(-5px); /* Lift effect on hover */
+}
   /* Courses Section */
   .courses .container {
     padding: 20px;
@@ -317,9 +386,22 @@ body {
     font-size: 1.2rem;
   }
 
-  .course-card p {
-    font-size: 0.9rem;
-  }
+.course-card p {
+  font-size: 0.9rem;
+  color: #444; /* Slightly lighter dark color for better readability */
+  line-height: 1.6; /* Increased line-height for better readability */
+  padding: 12px; /* Add padding for spacing */
+  background-color: #fff; /* White background for contrast */
+  border-radius: 8px; /* Rounded corners for a modern look */
+  border: 1px solid #ddd; /* Light border for structure */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover transitions */
+}
+
+.course-card p:hover {
+  background-color: #f0f8ff; /* Light blue background on hover */
+  transform: translateY(-4px); /* Slight lift effect on hover */
+}
 
   .course-card a {
     font-size: 1rem;
@@ -340,9 +422,21 @@ body {
     font-size: 1.1rem;
   }
 
-  .info-card p {
-    font-size: 0.9rem;
-  }
+.info-card p {
+  font-size: 0.9rem;
+  color: #333; /* Darker text color for better readability */
+  line-height: 1.5; /* Adds spacing between lines for better readability */
+  padding: 10px; /* Adds some padding for better spacing */
+  background-color: #f7f7f7; /* Light background for a clean look */
+  border-radius: 5px; /* Slightly rounded corners for a soft look */
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
+  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth transition effects */
+}
+
+.info-card p:hover {
+  background-color: #e0f7fa; /* Light blue background on hover */
+  transform: translateY(-5px); /* Slight lift effect on hover */
+}
 }
 /* Footer Styling */
 footer {
@@ -368,6 +462,19 @@ footer {
 
 .contact-info p {
   margin: 5px 0;
+  padding: 8px;
+  font-size: 16px;
+  color: #555; /* Dark grey color for text */
+  background-color: #f9f9f9; /* Light grey background */
+  border-left: 4px solid #007BFF; /* Blue left border for a subtle highlight */
+  border-radius: 4px; /* Slightly rounded corners */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
+  transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth hover transition */
+}
+
+.contact-info p:hover {
+  background-color: #e9f5ff; /* Lighter blue when hovering */
+  transform: translateX(5px); /* Slight rightward movement on hover */
 }
 
 .contact-info a {
