--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif; /* Modern clean font */
+  background: linear-gradient(to right, #e0eafc, #cfdef3); /* Smooth gradient background */
+  color: #333;
+  min-height: 100vh;
+}
 
 h2 {
   font-family: 'Poppins', sans-serif;
