--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif; /* Modern clean font */
-  background: linear-gradient(to right, #e0eafc, #cfdef3); /* Smooth gradient background */
+  width: 100%;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(to right, #e0eafc, #cfdef3);
   color: #333;
-  min-height: 100vh;
+  min-height: 100vh; /* Make sure body always covers full screen height */
+  overflow-x: hidden; /* Prevent horizontal scroll */
 }
+
 
 h2 {
   font-family: 'Poppins', sans-serif;
@@ -107,12 +111,13 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 200px;
   height: 100%;
   background-color: white;
   padding-top: 60px;
   box-shadow: 2px 0 8px rgba(0, 0, 0, 0.2);
   z-index: 999;
+  width: 100%; /* Full width navigation */
+  
 }
 
 /* Sidebar links */
