--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-family: 'Poppins', sans-serif;
   background: linear-gradient(to right, #e0eafc, #cfdef3);
-  color: #333;
-  min-height: 100vh; /* Make sure body always covers full screen height */
-  overflow-x: hidden; /* Prevent horizontal scroll */
+  display: flex; /* Flexbox for sidebar + content */
+  overflow-x: hidden;
 }
 h2 {
   font-family: 'Poppins', sans-serif;
@@ -100,23 +99,22 @@ h2::after {
   to { transform: rotate(360deg); }
 }
 
-/* Sidebar container */
+/* Sidebar nav */
 nav {
-  position: fixed;
+  width: 250px; /* Sidebar width */
+  height: 100vh; /* Full screen height */
+  background-color: #007BFF;
+  padding-top: 30px;
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
+  position: fixed; /* Stay fixed on scroll */
   top: 0;
   left: 0;
-  height: 100%;
-  background-color: white;
-  padding-top: 60px;
-  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.2);
-  z-index: 999;
-  width: 100%; /* Full width navigation */
 }
 
-/* Sidebar links */
 nav ul {
-  list-style-type: none;
+  list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 nav ul li {
@@ -125,25 +123,20 @@ nav ul li {
 }
 
 nav ul li a {
-  display: block;
-  padding: 12px 20px;
-  color: skyblue;
+  color: #fff;
   text-decoration: none;
-  font-size: 18px;
-  transition: 0.3s;
-  border-radius: 8px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  display: block;
+  padding: 10px;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 nav ul li a:hover {
-  background-color: #0066cc; /* Lighter blue on hover */
-  color: #ffcc00; /* Gold text on hover */
+  background-color: #0056b3;
+  color: #ffd700;
 }
 
-/* To push the main content to the right */
-body {
-  margin-left: 220px;
-  font-family: 'Poppins', sans-serif; /* Optional: Modern font */
-}
 .hero {
   position: relative;
   height: 90vh;
