--- a/index.html
+++ b/index.html
@@ -12,674 +12,155 @@
     <title>Africa Driving License Center - Hawassa</title>
 
     <style>
+/* Reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-h2 {
-  font-family: 'Poppins', sans-serif;
-  font-size: 2rem;
-  font-weight: bold;
-  color: #003366;
-  text-align: center;
-  margin-bottom: 20px;
-  position: relative;
-  padding-bottom: 10px;
-}
-h2::after {
-  content: '';
-  position: absolute;
-  width: 80px;
-  height: 4px;
-  background: linear-gradient(90deg, #ffcc00, #003366);
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 5px;
-  animation: underlineAnimation 1s ease-in-out;
-}
-@keyframes underlineAnimation {
-  0% {
-    width: 0;
-    opacity: 0;
-  }
-  50% {
-    width: 40px;
-    opacity: 1;
-  }
-  100% {
-    width: 80px;
-    opacity: 1;
-  }
-}
-/* Mobile Responsive */
-@media (max-width: 768px) {
-  h2 {
-    font-size: 1.5rem;
-    padding-bottom: 8px;
-  }
-  h2::after {
-    width: 50px;
-  }
-}
 /* Loader */
 .loader {
   position: fixed;
-  top: 0; left: 0;
+  background: #fff;
   width: 100%;
   height: 100%;
-  background: white;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   z-index: 9999;
+  transition: opacity 1s ease;
 }
-
+.loader.fade-out {
+  opacity: 0;
+  visibility: hidden;
+}
 .spinner {
-  width: 50px;
-  height: 50px;
-  border: 6px solid #ccc;
-  border-top-color: #3498db;
+  width: 40px;
+  height: 40px;
+  border: 5px solid #ccc;
+  border-top: 5px solid #007bff;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
-
 @keyframes spin {
   to { transform: rotate(360deg); }
 }
 
-/* Sidebar nav */
-nav {
-  width: 250px; /* Sidebar width */
-  height: 100vh; /* Full screen height */
-  background-color: #007BFF;
-  padding-top: 30px;
-  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
-  position: fixed; /* Stay fixed on scroll */
-  top: 0;
-  left: 0;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-nav ul li {
-  margin: 20px 0;
-  text-align: center;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.2rem;
-  font-weight: 500;
-  display: block;
-  padding: 10px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-nav ul li a:hover {
-  background-color: #0056b3;
-  color: #ffd700;
-}
-
+/* Hero Section */
 .hero {
   position: relative;
-  height: 90vh;
-  overflow: hidden;
+  height: 100vh;
+  background: url('https://images.unsplash.com/photo-1506015391300-4802dc74de2e') center/cover no-repeat;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  color: #fff;
   text-align: center;
-  color: white;
-  padding: 20px;
-  animation: changeBackground 15s infinite ease-in-out;
-  background-size: cover;
-  background-position: center;
 }
-
-/* Animation Keyframes */
-@keyframes changeBackground {
-  0% {
-    background-image: url('a.png');
-  }
-  33% {
-    background-image: url('b.png');
-  }
-  66% {
-    background-image: url('c.png');
-  }
-  100% {
-    background-image: url('a.png');
-  }
+.hero-overlay {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
 }
-
-/* Hero Content */
 .hero-content {
-  background: rgba(0, 0, 0, 0.5); /* Optional: slight dark overlay */
-  padding: 20px;
-  border-radius: 10px;
+  position: relative;
+  z-index: 1;
 }
 
-/* Mobile Responsive */
-@media (max-width: 768px) {
-  .hero {
-    height: auto;
-    padding: 50px 20px;
-  }
-
-  .hero-content h2 {
-    font-size: 1.5rem;
-  }
-
-.hero-content p {
-  color: #ddd; /* Light grey text for contrast on dark backgrounds */
-  font-size: 1rem; /* Standard font size */
-  line-height: 1.6; /* Improved line height for readability */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Soft text shadow for depth */
-  padding: 15px 20px; /* Add padding for spacing */
-  background-color: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background for readability */
-  border-radius: 6px; /* Rounded corners for a modern look */
-  max-width: 80%; /* Limit width for better control over text placement */
-  margin: 20px auto; /* Center the content with margin */
-  text-align: center; /* Center-align text for a balanced appearance */
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* Subtle shadow for depth */
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover transition */
-}
-
-.hero-content p:hover {
-  background-color: rgba(0, 0, 0, 0.7); /* Darker background on hover */
-  transform: translateY(-4px); /* Slight upward movement on hover */
-}
-}
-
-.hero-content h2 {
-  font-size: 2rem;
-  color: white;
-  margin-bottom: 10px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.hero-content p {
-  color: #ddd; /* Light grey text for contrast on dark backgrounds */
-  font-size: 1rem; /* Standard font size */
-  line-height: 1.6; /* Improved line height for readability */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Soft text shadow for depth */
-  padding: 15px 20px; /* Add padding for spacing */
-  background-color: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background for readability */
-  border-radius: 6px; /* Rounded corners for a modern look */
-  max-width: 80%; /* Limit width for better control over text placement */
-  margin: 20px auto; /* Center the content with margin */
-  text-align: center; /* Center-align text for a balanced appearance */
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* Subtle shadow for depth */
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover transition */
-}
-
-.hero-content p:hover {
-  background-color: rgba(0, 0, 0, 0.7); /* Darker background on hover */
-  transform: translateY(-4px); /* Slight upward movement on hover */
-}
-
-/* Courses Section */
-.courses .container {
-  padding: 20px;
-}
-
-.course-card {
-  background: #f9f9f9;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+/* Mobile Menu */
+.menu {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 250px;
+  background: #222;
+  height: 100%;
+  padding: 2rem;
   transition: 0.3s;
+  z-index: 10000;
+}
+.menu ul {
+  list-style: none;
+}
+.menu ul li {
+  margin: 1rem 0;
+}
+.menu ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+.menu.open {
+  left: 0;
+}
+.menu-toggle {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  background: #007bff;
+  color: white;
+  border: none;
+  font-size: 2rem;
+  z-index: 10001;
+}
+
+/* Stats Section */
+.stats {
+  display: flex;
+  justify-content: space-around;
+  background: #f5f5f5;
+  padding: 2rem 1rem;
+}
+.stat-card {
+  background: rgba(255,255,255,0.7);
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+  padding: 1rem;
+  text-align: center;
+  min-width: 100px;
+  margin: 0.5rem;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+}
+
+/* Course Cards */
+.course-card {
+  background: rgba(255,255,255,0.7);
+  backdrop-filter: blur(8px);
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 12px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.1);
   text-align: center;
 }
-
-.course-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-}
-
 .course-card h3 {
-  font-size: 1.5rem;
-  color: #003366;
+  margin-bottom: 0.5rem;
 }
-
 .course-card p {
-  color: #555; /* Dark grey text for readability */
-  font-size: 1rem; /* Standard font size */
-  margin: 15px 0; /* Vertical margin for spacing */
-  line-height: 1.6; /* Adjust line height for better readability */
-  padding: 12px; /* Add padding for spacing around the text */
-  background-color: #fafafa; /* Light grey background for a subtle contrast */
-  border-left: 4px solid #007BFF; /* Blue left border for a modern touch */
-  border-radius: 8px; /* Rounded corners for a softer, modern look */
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover effect */
-}
-
-.course-card p:hover {
-  background-color: #e3f2fd; /* Light blue background on hover */
-  transform: translateY(-4px); /* Lift effect on hover */
-}
-
-.course-card a {
-  text-decoration: none;
-  background-color: #3498db;
-  padding: 10px 20px;
-  color: white;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.course-card a:hover {
-  background-color: #2980b9;
+  font-size: 0.9rem;
+  color: #333;
 }
 
 /* About Section */
 .about {
-  background: #f0f0f0;
-  padding: 30px 20px;
+  padding: 2rem;
+  background: #fafafa;
 }
-
-.info-cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-top: 20px;
-  justify-content: space-between;
-}
-
-.info-card {
-  flex: 1 1 45%;
-  background: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  transition: 0.3s;
-}
-
-.info-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-}
-
-.info-card h4 {
-  color: #003366;
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-}
-
-.info-card p {
-  color: #555; /* Dark grey text color */
-  font-size: 1rem; /* Set font size for readability */
-  line-height: 1.6; /* Increase line height for better readability */
-  padding: 12px; /* Add padding for spacing inside the paragraph */
-  background-color: #f8f8f8; /* Light grey background for a clean look */
-  border-left: 4px solid #007BFF; /* Add a blue left border for emphasis */
-  border-radius: 6px; /* Slightly rounded corners for a modern look */
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Light shadow for subtle depth */
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth transition for hover effects */
-}
-
-.info-card p:hover {
-  background-color: #e0f7fa; /* Light blue background on hover */
-  transform: translateY(-4px); /* Slight upward lift on hover */
-}
-
-
-  /* Hero Section */
-  .hero {
-    height: auto;
-    padding: 50px 20px;
-    text-align: center;
-    box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.5);
-  }
-
-  .hero-content h2 {
-    font-size: 1.5rem;
-  }
-
-.hero-content p {
-  font-size: 1rem;
-  color: #ffffff; /* White text color for contrast against dark backgrounds */
-  line-height: 1.6; /* Improve line spacing for better readability */
-  padding: 15px 20px; /* Add padding for a more comfortable space around text */
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for contrast */
-  border-radius: 8px; /* Rounded corners for a softer look */
-  max-width: 80%; /* Limit width for better control over text placement */
-  margin: 20px auto; /* Center the content with some margin */
-  text-align: center; /* Center-align text for a polished appearance */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Shadow for added depth */
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover effects */
-}
-
-.hero-content p:hover {
-  background-color: rgba(0, 0, 0, 0.7); /* Darker background on hover */
-  transform: translateY(-5px); /* Lift effect on hover */
-}
-  /* Courses Section */
-  .courses .container {
-    padding: 20px;
-  }
-
-  .course-card {
-    margin-bottom: 15px;
-  }
-
-  .course-card h3 {
-    font-size: 1.2rem;
-  }
-
-.course-card p {
-  font-size: 0.9rem;
-  color: #444; /* Slightly lighter dark color for better readability */
-  line-height: 1.6; /* Increased line-height for better readability */
-  padding: 12px; /* Add padding for spacing */
-  background-color: #fff; /* White background for contrast */
-  border-radius: 8px; /* Rounded corners for a modern look */
-  border: 1px solid #ddd; /* Light border for structure */
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth hover transitions */
-}
-
-.course-card p:hover {
-  background-color: #f0f8ff; /* Light blue background on hover */
-  transform: translateY(-4px); /* Slight lift effect on hover */
-}
-
-  .course-card a {
-    font-size: 1rem;
-    padding: 8px 15px;
-  }
-
-  /* About Section */
-  .info-cards {
-    flex-direction: column;
-  }
-
-  .info-card {
-    flex: 1 1 100%;
-    margin-bottom: 20px;
-  }
-
-  .info-card h4 {
-    font-size: 1.1rem;
-  }
-
-.info-card p {
-  font-size: 0.9rem;
-  color: #333; /* Darker text color for better readability */
-  line-height: 1.5; /* Adds spacing between lines for better readability */
-  padding: 10px; /* Adds some padding for better spacing */
-  background-color: #f7f7f7; /* Light background for a clean look */
-  border-radius: 5px; /* Slightly rounded corners for a soft look */
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
-  transition: transform 0.3s ease, background-color 0.3s ease; /* Smooth transition effects */
-}
-
-.info-card p:hover {
-  background-color: #e0f7fa; /* Light blue background on hover */
-  transform: translateY(-5px); /* Slight lift effect on hover */
-}
-}
-/* Footer Styling */
-footer {
-  background-color: #003366;
-  color: white;
-  padding: 30px;
-  font-family: Arial, sans-serif;
-}
-
-/* Contact Info Section */
-.contact-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-/* Contact Info Styling */
-.contact-info {
-  flex: 1 1 48%;
-  margin-bottom: 20px;
-}
-
-.contact-info p {
-  margin: 5px 0;
-  padding: 8px;
-  font-size: 16px;
-  color: #555; /* Dark grey color for text */
-  background-color: #f9f9f9; /* Light grey background */
-  border-left: 4px solid #007BFF; /* Blue left border for a subtle highlight */
-  border-radius: 4px; /* Slightly rounded corners */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
-  transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth hover transition */
-}
-
-.contact-info p:hover {
-  background-color: #e9f5ff; /* Lighter blue when hovering */
-  transform: translateX(5px); /* Slight rightward movement on hover */
-}
-
-.contact-info a {
-  color: #FFD700;
-  text-decoration: none;
-}
-
-.contact-info a:hover {
-  text-decoration: underline;
-}
-
-/* Branches Styling */
-.branches {
-  flex: 1 1 48%;
-}
-
-.branches ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.branches ul li {
-  margin-bottom: 5px;
-}
-
-.branches p {
-  color: white;
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-/* Footer Bottom */
-footer div {
-  padding: 10px;
-  background-color: #333;
-  color: white;
-  font-size: 13px;
-  text-align: left;
-  border-top: 5px solid #FFD700;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-footer div a {
-  color: #FFD700;
-  text-decoration: none;
-  margin: 0 10px;
-}
-
-footer div a:hover {
-  text-decoration: underline;
-}
-
-/* Media Query for Mobile */
-@media (max-width: 768px) {
-  .contact-section {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .contact-info, .branches {
-    flex: 1 1 100%;
-  }
-
-  footer div {
-    text-align: center;
-  }
-
-  footer div p {
-    font-size: 12px;
-  }
-}
-        /* Popup Modal */
-#popupModal {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  padding-top: 100px;
-  left: 0; top: 0;
-  width: 100%; height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-#popupModalContent {
-  margin: auto;
-  background: white;
-  padding: 30px;
-  border-radius: 10px;
-  width: 90%;
-  max-width: 600px;
-  animation: popupFadeIn 0.5s ease;
-  position: relative;
-}
-
-@keyframes popupFadeIn {
-  from { opacity: 0; transform: scale(0.8); }
-  to { opacity: 1; transform: scale(1); }
-}
-
-#popupTitle {
-  font-size: 24px;
-  color: #003366;
-  font-weight: bold;
-  margin-bottom: 15px;
+.about h2 {
   text-align: center;
-  border-bottom: 2px solid #003366;
-  padding-bottom: 10px;
+  margin-bottom: 1rem;
 }
-
-#popupContent {
-  font-size: 16px;
+.about p {
   color: #555;
   line-height: 1.6;
 }
 
-/* Close Button */
-.close-btn {
-  position: absolute;
-  top: 15px;
-  right: 20px;
-  font-size: 28px;
-  font-weight: bold;
-  color: #333;
-  cursor: pointer;
-  transition: color 0.3s;
-}
-
-.close-btn:hover {
-  color: #e74c3c;
-}
-
-/* Section Smooth Appear */
-section {
-  transition: all 0.8s ease-out;
-}
-
-/* Info Card Animation */
-.info-card {
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-/* CTA Button Smooth Scroll (optional if you want to style it too) */
-.cta-btn {
-  display: inline-block;
-  background-color: #003366;
-  color: white;
-  padding: 12px 25px;
-  border-radius: 30px;
-  text-decoration: none;
-  font-size: 18px;
-  margin-top: 20px;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.cta-btn:hover {
-  background-color: #0055a5;
-  transform: translateY(-3px);
-}
-
-/* Hide and Show Header */
-#mainHeader {
-  transition: top 0.3s ease;
-}
-
-#mainHeader.hide {
-  top: -100px;
-}
-
-/* General Utilities */
-ul, ol {
-  padding-left: 20px;
-  color: #333;
-}
-        /* Initially hide the navigation menu */
-.menu {
-    display: none;
-}
-
-.menu ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.menu ul li {
-    margin: 10px 0;
-}
-
-.menu ul li a {
-    text-decoration: none;
-    color: #333;
-    font-size: 1rem;
-}
-
-.menu-toggle {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    display: block;
-    margin: 10px 0;
-}
-
-/* Mobile menu styles (can be customized) */
-@media (max-width: 768px) {
-    .menu {
-        display: block;
-        text-align: center;
-        width: 100%;
-    }
-
-    .menu ul li {
-        margin: 15px 0;
-    }
+/* Responsive */
+@media (min-width: 600px) {
+  .stats, .courses .container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
     </style>
 </head>
