--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 .hero {
   position: relative;
   height: 100vh;
-  background: url('a.png') center/cover no-repeat;
+  background-image: url('a.png') center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
