--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
 @keyframes spin {
   to { transform: rotate(360deg); }
 }
+h2 {
+  font-size: 50px;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
 
+h2::before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.1);
+  z-index: -1;
+  transform: scale(1.05);
+}
 /* Hero Section */
 .hero {
   position: relative;
@@ -173,7 +194,7 @@
   </div>
 
 
-          <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
+         
 
 <nav class="menu">
     <ul>
