--- a/index.html
+++ b/index.html
@@ -183,6 +183,51 @@ h2::before {
     justify-content: center;
   }
 }
+        footer {
+  background-color: #2a2a2a;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.contact-section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.contact-info p {
+  font-size: 16px;
+  margin: 10px 0;
+  line-height: 1.5;
+}
+
+.contact-info a {
+  color: #00bcd4;
+  text-decoration: none;
+}
+
+.contact-info a:hover {
+  text-decoration: underline;
+}
+
+.contact-info strong {
+  font-weight: bold;
+}
+
+footer p {
+  margin: 10px 0;
+  font-size: 14px;
+  color: #ccc;
+}
+
+footer p a {
+  color: #00bcd4;
+}
+
+footer p a:hover {
+  text-decoration: underline;
+}
     </style>
 </head>
 
@@ -341,7 +386,7 @@ h2::before {
 <section id="about" class="about">
   <br><br><br><br><br>
   <div class="container">
-     <h2>About Africa Driving License School</h2>
+     <h2>About Africa Driving License Center</h2>
     <p class="section-description" style="color: gray;">
       Africa Driving License School, located in Hawassa, is a leading institution dedicated to providing top-notch driving education. Our school aims to equip students with both the theoretical knowledge and practical skills needed to become confident, responsible, and skilled drivers. By offering structured and comprehensive driving programs, we focus on ensuring that our students are well-prepared not only for their driving exams but also for real-world driving situations.
 
