--- a/index.html
+++ b/index.html
@@ -183,17 +183,20 @@ h2::before {
     justify-content: center;
   }
 }
-        footer {
+footer {
   background-color: #2a2a2a;
   color: #fff;
   padding: 20px;
-  text-align: center;
 }
 
 .contact-section {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+}
+
+.contact-info {
+  text-align: left; /* Align text to the left */
 }
 
 .contact-info p {
