--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@ h2::before {
 .hero {
   position: relative;
   height: 100vh;
-  background-image: url('a.png') center/cover no-repeat;
+  background-image: url('a.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
