--- a/index.html
+++ b/index.html
@@ -234,6 +234,58 @@ footer p a {
 footer p a:hover {
   text-decoration: underline;
 }
+          /* Default Modal Style */
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+  }
+
+  .modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 600px;
+    position: relative;
+  }
+
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  /* Mobile-specific styles */
+  @media (max-width: 768px) {
+    .modal-content {
+      width: 90%;
+      padding: 15px;
+    }
+
+    .close {
+      top: 5px;
+      right: 10px;
+      font-size: 20px;
+    }
+
+    h2 {
+      font-size: 18px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
     </style>
 </head>
 
