--- a/index.html
+++ b/index.html
@@ -286,6 +286,17 @@ footer p a:hover {
       font-size: 14px;
     }
   }
+        /* Custom content color */
+  .modal-content h2, .modal-content p {
+    color: #2c3e50; /* Dark blue for text */
+  }
+
+  /* Mobile-specific content color */
+  @media (max-width: 768px) {
+    .modal-content h2, .modal-content p {
+      color: #3498db; /* Lighter blue for mobile */
+    }
+  }
     </style>
 </head>
 
