--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ h2::before {
 .hero {
   position: relative;
   height: 100vh;
-  background-image: url('a.png');
+  background-image: url('b.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
